--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
+    "highlightjs": "^9.10.0",
     "html-webpack-plugin": "2.29.0",
     "humps": "^2.0.1",
     "jest": "20.0.4",
