--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "antd": "^2.12.2",
     "autoprefixer": "7.1.1",
     "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
+    "babel-eslint": "^8.0.1",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
     "babel-plugin-import": "^1.2.1",
@@ -86,6 +86,7 @@
     "portable": "bin/portable"
   },
   "standard": {
+    "parser": "babel-eslint",
     "ignore": [
       "config",
       "scripts",
