Fix electron url

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ export PUBLIC_URL=""
 export HTTPS=false
 export HOST=0.0.0.0
 
+export REACT_APP_ADDRESS="http://localhost:${PORT}"
 export REACT_APP_CHAT_OAUTH2_ADDRESS="http://oauth2.chat-server.dev"
