Add env variable values

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 export PORT=4480
-export PUBLIC_URL=""
 export HTTPS=false
-export HOST=0.0.0.0
 
-export REACT_APP_ADDRESS="http://localhost:${PORT}"
-export REACT_APP_CHAT_OAUTH2_ADDRESS="http://oauth2.chat-server.dev"
+export REACT_APP_CLIENT_ADDRESS="http://oberon.dev"
+export REACT_APP_SERVER_OAUTH2_ADDRESS="http://oauth2.oberon.dev"
+export REACT_APP_SERVER_WEBSOCKET_ADDRESS="ws://websocket.oberon.dev"
+export REACT_APP_SERVER_WEBSOCKET_PATH="/socket"
