Simplify .env variables

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-export PORT=4480
 export HTTPS=false
+export PORT=4480
 
 export REACT_APP_CLIENT_ADDRESS="http://oberon.dev"
 export REACT_APP_SERVER_OAUTH2_ADDRESS="http://oauth2.oberon.dev"
-export REACT_APP_SERVER_WEBSOCKET_ADDRESS="ws://websocket.oberon.dev"
-export REACT_APP_SERVER_WEBSOCKET_PATH="/socket"
+export REACT_APP_SERVER_WEBSOCKET_ADDRESS="ws://websocket.oberon.dev/socket"
